kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
  labels:
    author: Praveen
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: praveensam/spring:v21
        ports:
        - containerPort: 8080
      - name: sam
        image: httpd
        ports:
        - containerPort: 80
