kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apps
  labels: 
    author: praveen
spec:
  containers:
    - name: httpd
      image: praveensam/apache80:v1
      ports: 
      - containerPort: 80
    - name: httpd1
      image: praveensam/apache81:v1
      ports: 
      - containerPort: 81
