kubernetes/istio.yaml
apiVersion: v1
kind: Service
metadata:
name: productpage
labels:
  app: productpage
spec:
type: NodePort
ports:
- port: 9080
  name: http
selector:
  app: productpage
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
name: productpage-v1
spec:
replicas: 1
template:
  metadata:
    labels:
      app: productpage
      track: stable
  spec:
    containers:
    - name: productpage
      image: istio/examples-bookinfo-productpage-v1
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 9080
