kubernetes/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    author: praveen

---

apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 81
  selector:
    author: praveen
