kubernetes/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31234

  selector:
    author: praveen

---

apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 81
    nodePort: 31233
  selector:
    author: praveen
