kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  type: LoadBalancer
  ports:
  - port: 80
    nodePort: 30080
    targetPort: 8080
  selector:
    app: webapp1
