kubernetes/ing-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
    http:
      paths: 
      - path: /apple
        backend:
          serviceName: webapp1-svc
          servicePort: 80
